[tool.poetry]
name = "aiwq"
version = "0.1.0"
description = "Get started with ollama"
authors = ["Inhof David <yrwqid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ollama = "^0.1.4"
rich = "^13.7.0"
psutil = "^5.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
